--- a/SolvitaireGUI/Views/AgentPanelView.xaml
+++ b/SolvitaireGUI/Views/AgentPanelView.xaml
@@ -6,14 +6,15 @@
              xmlns:local="clr-namespace:SolvitaireGUI"
              d:DataContext="{x:Static local:AgentPanelModel.Instance}"
              mc:Ignorable="d" 
-             d:DesignHeight="350" d:DesignWidth="200">
+             d:DesignHeight="350" d:DesignWidth="300">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <local:PlayerTypeAgentModeToVisibilityConverter x:Key="PlayerTypeAgentModeToVisibilityConverter" />
         <local:PlayerTypeHumanModeToVisibilityConverter x:Key="PlayerTypeHumanModeToVisibilityConverter" />
+        <local:NullToBoolConverter x:Key="NullToBoolConverter" />
     </UserControl.Resources>
     <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="{Binding PlayerLabel}" FontWeight="Bold" FontSize="18" Margin="0,0,0,10"/>
             <ComboBox ItemsSource="{Binding AvailableAgents}" 
                       SelectedItem="{Binding SelectedAgent}" 
@@ -42,6 +43,24 @@
                 <local:IntegerTexBoxControl Text="{Binding MaxDepth, UpdateSourceTrigger=PropertyChanged}"
                                             Margin="5,0,0,0" Width="60"/>
             </StackPanel>
+
+            <Button Content="Play Selected Move"
+                    Command="{Binding MakeSpecificMoveCommand}"
+                    IsEnabled="{Binding SelectedMove, Converter={StaticResource NullToBoolConverter}}"
+                    Margin="0,10,0,0"/>
+
+            <ListView ItemsSource="{Binding LegalMoves}"
+                      SelectedItem="{Binding SelectedMove, Mode=TwoWay}"
+                      Height="180" Margin="0,5,0,0">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel>
+                            <TextBlock Text="{Binding Evaluation, StringFormat={}{0:F3}}" Width="50" DockPanel.Dock="Left"/>
+                            <TextBlock Text="{Binding MoveString}" />
+                        </DockPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackPanel>
     </Grid>
 </UserControl>
