Created Connect Four Genetic Algorithm

--- a/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
+++ b/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
@@ -256,6 +256,10 @@
                                         DataType="{x:Type local:QuadraticGeneticAlgorithmParametersViewModel}">
                                         <local:QuadraticGeneticParametersControl />
                                     </DataTemplate>
+                                    <DataTemplate
+                                        DataType="{x:Type local:ConnectFourGeneticAlgorithmParametersViewModel}">
+                                        <local:ConnectFourGeneticParametersControl />
+                                    </DataTemplate>
                                 </ContentControl.Resources>
                             </ContentControl>
                         </StackPanel>
