--- a/SolvitaireGUI/Views/TwoPlayerPlayingView.xaml
+++ b/SolvitaireGUI/Views/TwoPlayerPlayingView.xaml
@@ -5,7 +5,7 @@
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
             xmlns:local="clr-namespace:SolvitaireGUI"
             d:DataContext="{x:Static local:TwoPlayerGameModel.Instance}"
-            mc:Ignorable="d" 
+            mc:Ignorable="d" MinWidth="800"
             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
     </UserControl.Resources>
@@ -16,7 +16,7 @@
             <ColumnDefinition Width="2.5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="80"/>
             <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
 
