--- a/SolvitaireGUI/MainWindow.xaml
+++ b/SolvitaireGUI/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Icon="Resources/Icons/ApplicationIcon.png"
         d:DataContext="{x:Static local:MainWindowModel.Instance}"
-        Title="MainWindow" Height="540" Width="1100">
+        Title="MainWindow" Height="540" Width="1120">
     <Window.Resources>
         <local:GameControllerTemplateSelector x:Key="GameControllerTemplateSelector">
             <local:GameControllerTemplateSelector.ConnectFourTemplate>
@@ -29,14 +29,10 @@
     </Window.Resources>
 
     <Grid>
-        <TabControl SelectedIndex="2">
-            <TabItem Header="Agent Playing" DataContext="{Binding AgentPlayingViewModel}">
+        <TabControl SelectedIndex="1">
+            <!--<TabItem Header="Agent Playing" DataContext="{Binding AgentPlayingViewModel}">
                 <local:AgentPlayingView DataContext="{Binding }"/>
-            </TabItem>
-
-            <TabItem Header="Game Inspection" DataContext="{Binding GameInspectionTabViewModel}" >
-                <local:GameStateInspectionView DataContext="{Binding }" />
-            </TabItem>
+            </TabItem>-->
 
             <TabItem Header="Genetic Algorithm" DataContext="{Binding GeneticAlgorithmTabViewModel}">
                 <local:GeneticAlgorithmTabView DataContext="{Binding }"/>
@@ -49,13 +45,20 @@
                         <RowDefinition Height="5*"/>
                     </Grid.RowDefinitions>
 
-                    <ComboBox Grid.Row="0" ItemsSource="{Binding AvailableGames}"
+                    <ComboBox Grid.Row="0" Panel.ZIndex="2"
+                              ItemsSource="{Binding AvailableGames}"
                               HorizontalAlignment="Left" Height="30" VerticalAlignment="Top"
                               SelectedItem="{Binding SelectedGame, Mode=TwoWay}"
-                              Width="150" Margin="10"/>
-                    <ContentControl Grid.Row="0" Grid.RowSpan="2" Content="{Binding GameControllerViewModel}"
-                                    ContentTemplateSelector="{StaticResource GameControllerTemplateSelector}" />
+                              Width="150" Margin="10"
+                              />
+                    <ContentControl Grid.Row="0" Grid.RowSpan="2" Panel.ZIndex="1"
+                                    Content="{Binding GameControllerViewModel}"
+                                    ContentTemplateSelector="{StaticResource GameControllerTemplateSelector}"/>
                 </Grid>
+            </TabItem>
+
+            <TabItem Header="Game Inspection" DataContext="{Binding GameInspectionTabViewModel}" >
+                <local:GameStateInspectionView DataContext="{Binding }" />
             </TabItem>
         </TabControl>
     </Grid>
