--- a/SolvitaireGUI/Views/AgentPanelView.xaml
+++ b/SolvitaireGUI/Views/AgentPanelView.xaml
@@ -17,156 +17,186 @@
         <local:NullToBoolConverter x:Key="NullToBoolConverter" />
         <local:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
     </UserControl.Resources>
-    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-        <Grid Margin="4">
+
+    <GroupBox Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}">
+        <GroupBox.Header>
+            <TextBlock Text="{Binding PlayerLabel}"
+                       FontWeight="Bold"
+                       FontSize="16"
+                       VerticalAlignment="Center"
+                       Margin="2" />
+        </GroupBox.Header>
+
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <!-- Spacer row for whitespace -->
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <!-- Header and controls -->
+                <RowDefinition Height="*" />
+                <!-- Scrollable content -->
+                <RowDefinition Height="Auto" />
+                <!-- Bottom buttons -->
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" 
-                   Text="{Binding PlayerLabel}" 
-                   FontWeight="Bold" 
-                   FontSize="16" 
-                   VerticalAlignment="Center"
-                   Margin="5"/>
+            <!-- Header and controls (static) -->
+            <Grid Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-            <!-- Agent Selection and Human/Agent -->
-            <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Top">
-                <ComboBox ItemsSource="{Binding AvailableAgents}" 
-                  SelectedItem="{Binding SelectedAgent}" 
-                  DisplayMemberPath="Name"
-                  Width="120"
-                  Margin="0,0,8,0"
-                  Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"/>
+                <!-- Agent Selection and Human/Agent -->
+                <StackPanel Grid.Row="0" Orientation="Horizontal"
+                            VerticalAlignment="Top">
+                    <ComboBox ItemsSource="{Binding AvailableAgents}"
+                              SelectedItem="{Binding SelectedAgent}"
+                              DisplayMemberPath="Name"
+                              Width="120"
+                              Margin="0,0,8,0"
+                              Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}" />
 
-                <!-- Switch to Human/Agent -->
-                <Button Content="Switch to Human" Command="{Binding SwitchToHumanCommand}" 
-                        Style="{StaticResource RoundedButtonStyle}" 
-                        Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"/>
-                <Button Content="Switch to Agent" Command="{Binding SwitchToAgentCommand}" 
-                        Style="{StaticResource RoundedButtonStyle}" 
-                        Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeHumanModeToVisibilityConverter}}"/>
-            </StackPanel>
-
-            
-
-            <!-- Start and Stop Buttons -->
-            <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Center">
-                <Button Content="Start Agent" Margin="0 10 5 0"
-                        Command="{Binding StartAgentCommand}" HorizontalAlignment="Center" VerticalAlignment="Center"
-                        Style="{StaticResource RoundedButtonStyle}" Width="80" 
-                        Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"
-                        IsEnabled="{Binding CanStartAgent}"/>
-                <Button Content="Stop Agent" Margin="0 10 5 0"
-                        Command="{Binding StopAgentCommand}" HorizontalAlignment="Center" VerticalAlignment="Center"
-                        Style="{StaticResource RoundedButtonStyle}" Width="80"
-                        IsEnabled="{Binding CanStopAgent}"
-                        Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"/>
-
-                <!-- Max Depth (Search Agent) -->
-                <StackPanel Orientation="Horizontal" Margin="0 12 0 0" HorizontalAlignment="Right"
-                            ToolTip="Max Depth for the lookahead search" VerticalAlignment="Center"
-                            Visibility="{Binding IsSearchAgent, Converter={StaticResource BoolToVisibilityConverter}}">
-                    <TextBlock Text="Max Depth:" />
-                    <local:IntegerTexBoxControl Text="{Binding MaxDepth, UpdateSourceTrigger=PropertyChanged}"
-                                                Margin="2,0,0,0" Width="28" />
+                    <!-- Switch to Human/Agent -->
+                    <Button Content="Switch to Human" Command="{Binding SwitchToHumanCommand}"
+                            Style="{StaticResource RoundedButtonStyle}"
+                            Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}" />
+                    <Button Content="Switch to Agent" Command="{Binding SwitchToAgentCommand}"
+                            Style="{StaticResource RoundedButtonStyle}"
+                            Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeHumanModeToVisibilityConverter}}" />
                 </StackPanel>
-            </StackPanel>
 
+                <!-- Start and Stop Buttons -->
+                <StackPanel Grid.Row="1" Orientation="Horizontal"
+                            VerticalAlignment="Center">
+                    <Button Content="Start Agent" Margin="0 10 5 0"
+                            Command="{Binding StartAgentCommand}" HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource RoundedButtonStyle}" Width="80"
+                            Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"
+                            IsEnabled="{Binding CanStartAgent}" />
+                    <Button Content="Stop Agent" Margin="0 10 5 0"
+                            Command="{Binding StopAgentCommand}" HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource RoundedButtonStyle}" Width="80"
+                            IsEnabled="{Binding CanStopAgent}"
+                            Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}" />
 
-            <!-- Legal Moves List -->
-            <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
-              ItemsSource="{Binding LegalMoves}"
-              SelectedItem="{Binding SelectedMove, Mode=TwoWay}"
-               Margin="0,8,0,0">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <DockPanel>
-                            <TextBlock Text="{Binding Evaluation, StringFormat={}{0:F3}}" Width="50" DockPanel.Dock="Left"/>
-                            <TextBlock Text="{Binding MoveString}" />
-                        </DockPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-
-            <!-- Spacer row for whitespace (Row 5) -->
-
-            <!-- Generation Log Slider and Chromosome Expander -->
-            <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" 
-                    Visibility="{Binding IsGenerationLogLoaded, Converter={StaticResource BoolToVisibilityConverter}}"
-                    HorizontalAlignment="Stretch" Margin="0,8,0,0">
+                    <!-- Max Depth (Search Agent) -->
+                    <StackPanel Orientation="Horizontal" Margin="0 12 0 0" HorizontalAlignment="Right"
+                                ToolTip="Max Depth for the lookahead search" VerticalAlignment="Center"
+                                Visibility="{Binding IsSearchAgent, Converter={StaticResource BoolToVisibilityConverter}}">
+                        <TextBlock Text="Max Depth:" />
+                        <local:IntegerTexBoxControl Text="{Binding MaxDepth, UpdateSourceTrigger=PropertyChanged}"
+                                                    Margin="2,0,0,0" Width="28" />
+                    </StackPanel>
+                </StackPanel>
 
                 <!-- Slider and Text Box -->
-                <Grid HorizontalAlignment="Stretch" Margin="0,0,0,0">
+                <Grid Grid.Row="2"
+                      HorizontalAlignment="Stretch" Margin="0 8 0 0"
+                      Visibility="{Binding IsGenerationLogLoaded, Converter={StaticResource BoolToVisibilityConverter}}">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="Generation:" VerticalAlignment="Center" Margin="0,0,8,0"/>
+                    <TextBlock Grid.Column="0" Text="Generation:" VerticalAlignment="Center" Margin="0,0,8,0" />
                     <Slider Grid.Column="1"
-                            Minimum="{Binding MinGeneration}" Maximum="{Binding MaxGeneration}" 
-                            Value="{Binding SelectedGeneration, Mode=TwoWay}" 
+                            Minimum="{Binding MinGeneration}" Maximum="{Binding MaxGeneration}"
+                            Value="{Binding SelectedGeneration, Mode=TwoWay}"
                             TickFrequency="1" IsSnapToTickEnabled="True"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Stretch"
-                            Margin="0"/>
-                    <local:IntegerTexBoxControl Grid.Column="2" Text="{Binding SelectedGeneration}" VerticalAlignment="Center" Margin="8,0,0,0"/>
+                            Margin="0" />
+                    <local:IntegerTexBoxControl Grid.Column="2" Text="{Binding SelectedGeneration}"
+                                                VerticalAlignment="Center" Margin="8,0,0,0" />
                 </Grid>
+            </Grid>
 
-                <Expander Header="Chromosome Weights"
-                          IsExpanded="True"
-                          Visibility="{Binding IsGeneticAgentSelected, Converter={StaticResource BoolToVisibilityConverter}}"
-                          Margin="0,0,0,0"
-                          HorizontalAlignment="Stretch">
-                    <StackPanel HorizontalAlignment="Stretch">
-                        <TextBlock Text="Chromosome:" FontWeight="Bold" Margin="0,0,0,4"/>
-                        <ItemsControl ItemsSource="{Binding SelectedAgentChromosomeViewModel.Weights}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <WrapPanel Orientation="Horizontal" HorizontalAlignment="Stretch"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid Margin="5" HorizontalAlignment="Stretch" MinWidth="200">
-                                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                                        <TextBox Text="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                                 Style="{StaticResource TextBoxStyle}"
-                                                 Width="80" HorizontalAlignment="Right"/>
-                                    </Grid>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </StackPanel>
-                </Expander>
+            <!-- Scrollable content: Move List (Expander) and Weights -->
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled"
+                          VerticalAlignment="Stretch">
+                <DockPanel VerticalAlignment="Stretch">
+                    <!-- Legal Moves List -->
+                    <DataGrid ItemsSource="{Binding LegalMoves}"
+                              SelectedItem="{Binding SelectedMove, Mode=TwoWay}"
+                              AutoGenerateColumns="False"
+                              SelectionMode="Single"
+                              Margin="0,4,0,0"
+                              GridLinesVisibility="None"
+                              MinHeight="100"
+                              DockPanel.Dock="Top"
+                              HorizontalAlignment="Stretch">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Evaluation"
+                                                Binding="{Binding Evaluation, StringFormat={}{0:F3}}"
+                                                Width="80">
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="HorizontalAlignment" Value="Center" />
+                                        <Setter Property="VerticalAlignment" Value="Center" />
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn>
+                            <DataGridTextColumn Header="Move"
+                                                Binding="{Binding MoveString}">
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="HorizontalAlignment" Value="Left" />
+                                        <Setter Property="VerticalAlignment" Value="Center" />
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
 
-            </StackPanel>
+                    <!--  Chromosome Expander -->
+                    <Expander Header="Chromosome Weights"
+                              IsExpanded="True"
+                              ExpandDirection="Up"
+                              DockPanel.Dock="Bottom"
+                              Visibility="{Binding IsGeneticAgentSelected, Converter={StaticResource BoolToVisibilityConverter}}"
+                              Margin="0,0,0,0"
+                              HorizontalAlignment="Stretch">
+                        <StackPanel HorizontalAlignment="Stretch">
+                            <ItemsControl ItemsSource="{Binding SelectedAgentChromosomeViewModel.Weights}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Stretch" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid Margin="5" HorizontalAlignment="Stretch" MinWidth="180">
+                                            <TextBlock Text="{Binding Name}" VerticalAlignment="Center"
+                                                       HorizontalAlignment="Left" />
+                                            <TextBox
+                                                Text="{Binding Value, StringFormat={}{0:F3}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                Style="{StaticResource TextBoxStyle}"
+                                                Width="60" HorizontalAlignment="Right" />
+                                        </Grid>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </StackPanel>
+                    </Expander>
+                </DockPanel>
+            </ScrollViewer>
 
-            <!-- Bottom Buttons -->
-            <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,8,0,0">
+            <!-- Bottom Buttons (static) -->
+            <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Center"
+                        Margin="0,8,0,0">
 
-                <Button Content="Make Move" Command="{Binding MakeMoveCommand}" 
+                <Button Content="Make Move" Command="{Binding MakeMoveCommand}"
                         Style="{StaticResource RoundedButtonStyle}" Width="100" Margin="0,0,8,0"
                         Visibility="{Binding PlayerType, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"
-                        IsEnabled="{Binding IsMyTurn}"/>
+                        IsEnabled="{Binding IsMyTurn}" />
                 <Button Content="Play Selected Move"
-                    Command="{Binding MakeSpecificMoveCommand}"
-                    Style="{StaticResource RoundedButtonStyle}" Width="130"
-                    IsEnabled="{Binding SelectedMove, Converter={StaticResource NullToBoolConverter}}"/>
+                        Command="{Binding MakeSpecificMoveCommand}"
+                        Style="{StaticResource RoundedButtonStyle}" Width="130"
+                        IsEnabled="{Binding SelectedMove, Converter={StaticResource NullToBoolConverter}}" />
             </StackPanel>
+
         </Grid>
-    </ScrollViewer>
+
+    </GroupBox>
 </UserControl>
