--- a/SolvitaireGUI/Views/OnePlayerPlayingView.xaml
+++ b/SolvitaireGUI/Views/OnePlayerPlayingView.xaml
@@ -4,14 +4,15 @@
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
             xmlns:local="clr-namespace:SolvitaireGUI"
-            d:DataContext="{x:Static local:SinglePlayerGameModel.Instance}"
+            d:DataContext="{x:Static local:OnePlayerGameModel.Instance}"
             mc:Ignorable="d" 
             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
     </UserControl.Resources>
-    <Grid >
+    <Grid Background="{StaticResource BackgroundColor}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="Auto"/> <!-- For the GridSplitter -->
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -20,11 +21,14 @@
         </Grid.RowDefinitions>
 
         <!-- Agent Panels -->
-        <local:AgentPanelView DataContext="{Binding AgentPanel}" 
+        <local:AgentPanelView DataContext="{Binding AgentPanel}"   
                               Grid.Column="0" Grid.Row="1"/>
 
+        <!-- Vertical GridSplitter -->
+        <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Width="5" HorizontalAlignment="Center" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext"/>
+
         <!-- Top Panel: Game Controls -->
-        <Grid Grid.Row="0" Grid.Column="0"  >
+        <Grid Grid.Row="0" Grid.Column="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
@@ -50,7 +54,7 @@
         </Grid>
 
         <!-- Center Panel: Game Board -->
-        <ContentControl Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"  Content="{Binding GameStateViewModel}">
+        <ContentControl Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"  Content="{Binding GameStateViewModel}">
             <ContentControl.Resources>
 
                 <DataTemplate DataType="{x:Type local:SolitaireGameStateViewModel}">
