--- a/SolvitaireGUI/Views/TwoPlayerPlayingView.xaml
+++ b/SolvitaireGUI/Views/TwoPlayerPlayingView.xaml
@@ -9,10 +9,12 @@
             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
     </UserControl.Resources>
-    <Grid >
+    <Grid Background="{StaticResource BackgroundColor}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2.5*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="2.5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -24,10 +26,16 @@
         <local:AgentPanelView DataContext="{Binding Player1Panel}" 
                               Grid.Column="0" Grid.Row="1"/>
         <local:AgentPanelView DataContext="{Binding Player2Panel}" 
-                              Grid.Column="2" Grid.Row="1"/>
+                              Grid.Column="4" Grid.Row="1"/>
+
+        <!-- Vertical GridSplitter -->
+        <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Width="5" 
+                      HorizontalAlignment="Center" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext"/>
+        <GridSplitter Grid.Row="0" Grid.Column="3" Grid.RowSpan="2" Width="5" 
+                      HorizontalAlignment="Center" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext"/>
 
         <!-- Top Panel: Game Controls -->
-        <Grid Grid.Row="0" Grid.Column="1"  >
+        <Grid Grid.Row="0" Grid.Column="2" Background="{StaticResource BackgroundColor}" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
@@ -53,7 +61,7 @@
         </Grid>
 
         <!-- Center Panel: Game Board -->
-        <ContentControl Grid.Row="1" Grid.Column="1"  Content="{Binding GameStateViewModel}">
+        <ContentControl Grid.Row="1" Grid.Column="2"  Content="{Binding GameStateViewModel}">
             <ContentControl.Resources>
                 <DataTemplate DataType="{x:Type local:ConnectFourGameStateViewModel}">
                     <local:ConnectFourBoardView DataContext="{Binding}" />
